[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "short games with numbers"
authors = ["Jane Drobova <janejuly1@gmail.com>"]
readme = "README.md"
packages = [
    { include = "brain_games" },
]
classifiers = [
    "Programming Language :: Python",
    "Topic :: Software Development :: Games"
]
repository = "https://github.com/janejuly1/python-project-49.git"

[tool.poetry.dependencies]
python = "^3.11"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
